Add credentials config that supports custom keys (#694)
* Add credentials config and the ability to override with environmnet variables

* Run black src

* fix small CI issues

* Integrate new config with database commands

* Update cli tests for new database cases

* Update bug in importing class

* Update okta commands to support new credentials options

* Update fidesctl ci target with new command usage

* Update aws commands to support new credentials options

* small change to docs

* Some more docs improvements

* Fix typo in docs

* Updates to cli command descriptions

* black updates

* update testing organization

* Apply suggestions from code review

auto commit github suggestionsfor docs

Co-authored-by: Steve Murphy <steven.d.murphy@gmail.com>
Co-authored-by: Cole Isaac <82131455+conceptualshark@users.noreply.github.com>

* Update CHANGELOG.md

Co-authored-by: Thomas <thomas.lapiana+github@pm.me>

* Address nit comments and docs update

Co-authored-by: Eduardo Armendariz <eduardo@ethyca.com>
Co-authored-by: Thomas <thomas.lapiana+github@pm.me>
Co-authored-by: Steve Murphy <steven.d.murphy@gmail.com>
Co-authored-by: Cole Isaac <82131455+conceptualshark@users.noreply.github.com>

--- a/tests/test_config.toml
+++ b/tests/test_config.toml
@@ -11,3 +11,9 @@ test_database_name = "fidesctl_test"
 
 [user]
 analytics_opt_out = true
+
+
+[credentials]
+postgres_1 = {connection_string="postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl_test"}
+okta_1 = {orgUrl="https://dev-78908748.okta.com", token="redacted_override_in_tests"}
+aws_1 = {aws_access_key_id="redacted_id_override_in_tests", aws_secret_access_key="redacted_override_in_tests", region_name="us-east-1"}
