Improve configuration variable troubleshooting with DEBUG logs, more helpful errors, and unit tests (#579)
* Improve error message for APP_ENCRYPTION_KEY

Adds the expected & actual char length for the config var to the error
message, to aid in troubleshooting

* Update tests with black formatting

* Add tests for loading config vars

* Only attempt to parse config vars once

* Add ability to specify LOG_LEVEL via the config

* Log all config vars during startup at DEBUG level

* Update CHANGELOG.md with new features

* Update configuration docs

* Add comment to test fidesops.toml

* Use string interpolation instead of f-strings for log statements

--- a/fidesops.toml
+++ b/fidesops.toml
@@ -22,6 +22,7 @@ ENCODING="UTF-8"
 OAUTH_ROOT_CLIENT_ID="fidesopsadmin"
 OAUTH_ROOT_CLIENT_SECRET="fidesopsadminsecret"
 DRP_JWT_SECRET="secret"
+LOG_LEVEL = "INFO"
 
 [execution]
 TASK_RETRY_COUNT=0
