255 saas connector outreach [Access] (#588)
Adding dataset and access configuration for Outreach

--- a/pytest.ini
+++ b/pytest.ini
@@ -19,6 +19,7 @@ markers =
     integration_stripe
     integration_hubspot
     integration_segment
+    integration_outreach
     unit_saas
 
 filterwarnings =
