--- a/saas_config.toml
+++ b/saas_config.toml
@@ -42,3 +42,10 @@ namespace_id = ""
 access_secret = ""
 user_token = ""
 identity_email = ""
+
+[outreach]
+domain = ""
+client_id = ""
+client_secret = ""
+redirect_uri = ""
+page_size = ""
