--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ fastapi-caching[redis]
 fastapi-pagination[sqlalchemy]~= 0.8.3
 fastapi[all]==0.68.1
 fideslang==1.0.0
+fideslog==1.1.5
 multidimensional_urlencode==0.0.4
 pandas==1.3.3
 passlib[bcrypt]==1.7.2
