Cache/Surface Resume/Restart Privacy Request Details [#574] (#591)
* WIP Cache SQL queries for the manual connector for retrieve/update data.  The manual connector is probably not a SQL database, but it's a pretty readable way to surface what needs to be performed manually.  The actually format will probably change.

- To the privacy request status endpoint, surface the stopped step, stopped collection, manual queries, and resume endpoint for paused or failed privacy requests.

* Add unit tests asserting expected response for paused/failed privacy requests.

* Refactor caching details about the collection that halted privacy request execution to store all details under the same key: the step, the collection, and any action needed to resume.

- Add a ManualQueryConfig
- Get rid of using the SQLQueryConfig to cache queries, instead opt to store these in a more generic way for later flexibility.

* Get rid of elements that cache a SQLQuery from an earlier draft. We're now caching more generic components.

* Remove import of element that no longer exists.

* Add new paused_at field for when a request is paused by a webhook or a manual collection.

- Start setting finished_processing_at on errored privacy requests that fail due to a collection issue.

* Small docstring changes.

* Add changelog and docs.

* Respond to CR -

* Fix wording in docs.

--- a/data/dataset/manual_dataset.yml
+++ b/data/dataset/manual_dataset.yml
@@ -10,11 +10,11 @@ dataset:
             fidesops_meta:
               primary_key: true
           - name: authorized_user
-            data_categories: [ user.derived.identifiable ]
+            data_categories: [ user.provided.identifiable ]
             fidesops_meta:
               data_type: string
           - name: customer_id
-            data_categories: [ user.derived.identifiable.unique_id ]
+            data_categories: [ user.provided.identifiable ]
             fidesops_meta:
               references:
                 - dataset: postgres_example_test_dataset
