Refactor auth and enable static file serving (#577)
* Rewrite auth

* Remove unnecessary API files

* Improve error handling in new user creation

* Enable static build export and serving

* Remove next-redux-wrapper

* Correct breaking ESLint file

* Clean up linting errors

* Clean up merge artifacts

* Update existing tests to use new auth

* Implement auth testing

* Cleanup merge artifact

* Cleanup merge artifacts

* Update Subject Requests detail page to use new auth

* Update docs and changelog

* Stop colocating tests in pages/ directory

* Require authentication for request details page

* Update error logging to use console.error

* Improve privacy request details page loading sequence

* Remove extraneous comment

--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "fidesui-template",
+  "name": "fidesops-admin-ui",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "dev:mock": "echo '🚨 Running with mock API'; NEXT_PUBLIC_MOCK_API=true next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
@@ -28,10 +28,8 @@
     "formik": "^2.2.9",
     "framer-motion": "^5",
     "lodash.debounce": "^4.0.8",
-    "msw": "^0.29.0",
+    "msw": "^0.42.0",
     "next": "12.1.0",
-    "next-auth": "^4.3.2",
-    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
