--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.
 # MyPy
 ######
 [tool.mypy]
-exclude = ["src.migrations.*"]
+exclude = ["fidesops.migrations.*"]
 warn_unused_configs = true
 ignore_missing_imports = true
 pretty = true
