--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       FIDESCTL__CLI__SERVER_HOST: "fidesctl"
       FIDESCTL__CLI__SERVER_PORT: "8080"
       FIDESCTL__API__DATABASE_HOST: "fidesctl-db"
+      
+  # fides ui
 
   fidesctl-db:
     image: postgres:12
