--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -1,9 +1,11 @@
-name: PR Checks
+name: Code Checks
 
 on:
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - "**.md"
 
 env:
   CONTAINER: fidesctl-local
