--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,13 @@ services:
     image: ethyca/fidesctl:local
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/api/v1/health" ]
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://0.0.0.0:8080/api/v1/health"
+        ]
       interval: 15s
       timeout: 5s
       retries: 5
@@ -24,8 +30,21 @@ services:
       FIDESCTL__CLI__SERVER_HOST: "fidesctl"
       FIDESCTL__CLI__SERVER_PORT: "8080"
       FIDESCTL__API__DATABASE_HOST: "fidesctl-db"
-      
-  # fides ui
+
+  fidesctl-ui:
+    image: ethyca/fidesctl:local-ui
+    command: npm run dev
+    depends_on:
+      - fidesctl
+    expose:
+      - 3000
+    ports:
+      - "3000:3000"
+    volumes:
+      - type: bind
+        source: .
+        target: /fides
+        read_only: False
 
   fidesctl-db:
     image: postgres:12
