Deploy UI within fidesops (#625)
* Switch to Chakra image instead of nextjs

* checking in progress towards static build

* Mount static file directory

* Update Dockerfile

* Add dockerignore file

* Fix file path

* Update Dockerfile

* Add admin ui config model

* Conditionally build the UI

* Fix env_prefix

* Remove hello_world placeholder

* Remove if logic from Dockerfile

* Fix issues with BASE_URL

* Refactor Head into component &  update URNs

* Fix import order

* Update test URL path

* Fix isort lint issue

* Fix unit test failure

* Update docs and changelog

--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -12,7 +12,10 @@
     "test:ci": "jest",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+    "export": "next build && next export",
+    "copy-export": "rsync -a --delete out/ ../../src/fidesops/build/static/",
+    "prod-export": "npm run export && npm run copy-export"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.0",
