--- a/fidesops.toml
+++ b/fidesops.toml
@@ -39,4 +39,6 @@ TASK_RETRY_BACKOFF = 1
 
 [root_user]
 ANALYTICS_OPT_OUT = false
-ANALYTICS_ID = "89187e1f107ebe56c35e4f864af83a90"
+
+[admin_ui]
+ENABLED = true
