fixed the UI configuration to support local or docker deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
         source: .
         target: /fides
         read_only: False
+    environment:
+      - NEXT_PUBLIC_FIDESCTL_API_SERVER=http://fidesctl:8080
 
   fidesctl-db:
     image: postgres:12
