--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -25,6 +25,7 @@
     "@fidesui/react": "^0.0.12",
     "@fontsource/inter": "^4.5.4",
     "@reduxjs/toolkit": "^1.8.0",
+    "chakra-react-select": "^3.3.7",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
