Add Prettier CI check and format UI code to be consistent  (#655)
* Run prettier on whole codebase

* Add prettier CI check

* Update format commands

* Add prettier formatting to the privacy center

* format admin ui tests too

* Add privacy center format CI check

* Update changelog

* Align formatting with fidesctl codebase

--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Format
+        run: npm run format:ci
+
       - name: Jest test
         run: npm run test:ci
 
@@ -64,6 +67,9 @@ jobs:
 
       - name: Lint
         run: npm run lint
+
+      - name: Format
+        run: npm run format:ci
 
       - name: Jest test
         run: npm run test:ci
