--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -7,7 +7,8 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write .",
+    "format": "prettier --write src/ __tests__/",
+    "format:ci": "prettier --check src/ __tests__/",
     "test": "jest --watch",
     "test:ci": "jest",
     "analyze": "cross-env ANALYZE=true next build",
