--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -35,8 +35,9 @@ nav:
       - Extending the Taxonomy: guides/extending_taxonomy.md
       - Generating a Data Map: guides/generating_datamap.md
   - Fides UI:
-      - Running the UI: admin_ui/overview.md
-      - User Management: admin_ui/user_management.md
+      - Overview: admin_ui/overview.md
+      - Configuration Wizard: admin_ui/wizard.md
+      - Managing Datasets: admin_ui/datasets.md
   - CI/CD Integration:
       - Overview: cicd/overview.md
       - Example Integrations: cicd/examples.md
