--- a/data/saas/config/saas_example_config.yml
+++ b/data/saas/config/saas_example_config.yml
@@ -6,10 +6,11 @@ saas_config:
 
   connector_params:
     - name: domain
+      default_value: localhost
     - name: username
     - name: api_key
     - name: api_version
-    - name: page_limit
+    - name: page_size
 
   client_config:
     protocol: https
@@ -23,152 +24,161 @@ saas_config:
   test_request:
     method: GET
     path: /3.0/lists
-    
+
   endpoints:
-  - name: messages
-    requests:
-      read:
-        method: GET
-        path: /3.0/conversations/<conversation_id>/messages
-        param_values:
-          - name: conversation_id
-            references:
-              - dataset: saas_connector_example
-                field: conversations.id
-                direction: from
-        postprocessors:
-          - strategy: unwrap
-            configuration:
-              data_path: conversation_messages
-          - strategy: filter
-            configuration:
-              field: from_email
-              value:
-                identity: email
-  - name: conversations
-    requests:
-      read:
-        method: GET
-        ignore_errors: true
-        path: /3.0/conversations
-        query_params:
-          - name: count
-            value: 1000
-          - name: offset
-            value: 0
-        param_values:
-          - name: placeholder
-            identity: email
-        postprocessors:
-          - strategy: unwrap
-            configuration:
-              data_path: conversations
-  - name: member
-    requests:
-      read:
-        method: GET
-        path: /3.0/search-members
-        query_params:
-          - name: query
-            value: <email>
-        param_values:
-          - name: email
-            identity: email
-        postprocessors:
-          - strategy: unwrap
-            configuration:
-              data_path: exact_matches.members
-      update:
-        method: PUT
-        path: /3.0/lists/<list_id>/members/<subscriber_hash>
-        param_values:
-          - name: list_id
-            references:
-              - dataset: saas_connector_example
-                field: member.list_id
-                direction: from
-          - name: subscriber_hash
-            references:
-              - dataset: saas_connector_example
-                field: member.id
-                direction: from
-        body: '{<masked_object_fields>}'
-  - name: payment_methods
-    requests:
-      read:
-        method: GET
-        path: /<version>/payment_methods
-        headers:
-          - name: Content-Type
-            value: application/json
-          - name: On-Behalf-Of
-            value: <email>
-          - name: Token
-            value: Custom <api_key>
-        query_params:
-          - name: limit
-            value: <limit>
-          - name: query
-            value: <email>
-        param_values:
-          - name: limit
-            connector_param: page_limit
-          - name: version
-            connector_param: api_version
-          - name: email
-            identity: email
-          - name: api_key
-            connector_param: api_key
-      update:
-        method: PUT
-        path: /<version>/payment_methods
-        param_values:
-          - name: version
-            connector_param: api_version
-        body: '{<masked_object_fields>}'
-  - name: projects
-    requests:
-      read:
-        method: GET
-        path: /api/0/projects/
-        param_values:
-          - name: placeholder
-            identity: email
-  - name: users
-    after: [saas_connector_example.projects]
-    requests:
-      read:
-        method: GET
-        path: /api/0/projects/<organization_slug>/<project_slug>/user-feedback/
-        query_params:
-          - name: query
-            value: <query>
-        grouped_inputs: [organization_slug, project_slug, query]
-        param_values:
-          - name: organization_slug
-            references:
-              - dataset: saas_connector_example
-                field: projects.organization.slug
-                direction: from
-          - name: project_slug
-            references:
-              - dataset: saas_connector_example
-                field: projects.slug
-                direction: from
-          - name: query
-            identity: email
-  - name: customer
-    requests:
-      read:
-        method: GET
-        path: /v1/customers/1
-        param_values:
-          - name: placeholder
-            identity: email
-      update:
-        method: POST
-        path: /v1/customers/1
-        headers:
-          - name: Content-Type
-            value: application/x-www-form-urlencoded
-        body: '{<all_object_fields>}'
+    - name: messages
+      requests:
+        read:
+          method: GET
+          path: /3.0/conversations/<conversation_id>/messages
+          param_values:
+            - name: conversation_id
+              references:
+                - dataset: saas_connector_example
+                  field: conversations.id
+                  direction: from
+          postprocessors:
+            - strategy: unwrap
+              configuration:
+                data_path: conversation_messages
+            - strategy: filter
+              configuration:
+                field: from_email
+                value:
+                  identity: email
+    - name: conversations
+      requests:
+        read:
+          method: GET
+          ignore_errors: true
+          path: /3.0/conversations
+          query_params:
+            - name: count
+              value: 1000
+            - name: offset
+              value: 0
+          param_values:
+            - name: placeholder
+              identity: email
+          postprocessors:
+            - strategy: unwrap
+              configuration:
+                data_path: conversations
+    - name: member
+      requests:
+        read:
+          method: GET
+          path: /3.0/search-members
+          query_params:
+            - name: query
+              value: <email>
+          param_values:
+            - name: email
+              identity: email
+          postprocessors:
+            - strategy: unwrap
+              configuration:
+                data_path: exact_matches.members
+        update:
+          method: PUT
+          path: /3.0/lists/<list_id>/members/<subscriber_hash>
+          param_values:
+            - name: list_id
+              references:
+                - dataset: saas_connector_example
+                  field: member.list_id
+                  direction: from
+            - name: subscriber_hash
+              references:
+                - dataset: saas_connector_example
+                  field: member.id
+                  direction: from
+          body: |
+            {
+              <masked_object_fields>
+            }
+    - name: payment_methods
+      requests:
+        read:
+          method: GET
+          path: /<version>/payment_methods
+          headers:
+            - name: Content-Type
+              value: application/json
+            - name: On-Behalf-Of
+              value: <email>
+            - name: Token
+              value: Custom <api_key>
+          query_params:
+            - name: limit
+              value: <limit>
+            - name: query
+              value: <email>
+          param_values:
+            - name: limit
+              connector_param: page_size
+            - name: version
+              connector_param: api_version
+            - name: email
+              identity: email
+            - name: api_key
+              connector_param: api_key
+        update:
+          method: PUT
+          path: /<version>/payment_methods
+          param_values:
+            - name: version
+              connector_param: api_version
+          body: |
+            {
+              <masked_object_fields>
+            }
+    - name: projects
+      requests:
+        read:
+          method: GET
+          path: /api/0/projects/
+          param_values:
+            - name: placeholder
+              identity: email
+    - name: users
+      after: [saas_connector_example.projects]
+      requests:
+        read:
+          method: GET
+          path: /api/0/projects/<organization_slug>/<project_slug>/user-feedback/
+          query_params:
+            - name: query
+              value: <query>
+          grouped_inputs: [organization_slug, project_slug, query]
+          param_values:
+            - name: organization_slug
+              references:
+                - dataset: saas_connector_example
+                  field: projects.organization.slug
+                  direction: from
+            - name: project_slug
+              references:
+                - dataset: saas_connector_example
+                  field: projects.slug
+                  direction: from
+            - name: query
+              identity: email
+    - name: customer
+      requests:
+        read:
+          method: GET
+          path: /v1/customers/1
+          param_values:
+            - name: placeholder
+              identity: email
+        update:
+          method: POST
+          path: /v1/customers/1
+          headers:
+            - name: Content-Type
+              value: application/x-www-form-urlencoded
+          body: |
+            {
+              <all_object_fields>
+            }
