Flesh out docker ignore
Co-authored-by: Paul Sanders <psanders1@gmail.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,9 +5,23 @@ src/fidesctl.egg-info/
 
 # Ignore Python-Specific Files
 .mypy_cache/
+.nox/
 .pytest_cache/
 __pycache__/
 .coverage
+
+# pyenv
+.python-version
+
+# Environments
+.env
+.venv
+env/
+venv/
+
+# Editors
+.vscode/
+.idea/
 
 # Ignore the docs
 docs/
